
[TestConvertTypeAnn/primitive_any - 1]
&ast.AnyTypeAnn{
    span: 1:1-1:4,
}
---

[TestConvertTypeAnn/primitive_unknown - 1]
&ast.UnknownTypeAnn{
    span: 1:1-1:8,
}
---

[TestConvertTypeAnn/primitive_void - 1]
&ast.VoidTypeAnn{
    span: 1:1-1:5,
}
---

[TestConvertTypeAnn/primitive_never - 1]
&ast.NeverTypeAnn{
    span: 1:1-1:6,
}
---

[TestConvertTypeAnn/primitive_string - 1]
&ast.StringTypeAnn{
    span: 1:1-1:7,
}
---

[TestConvertTypeAnn/primitive_number - 1]
&ast.NumberTypeAnn{
    span: 1:1-1:7,
}
---

[TestConvertTypeAnn/primitive_boolean - 1]
&ast.BooleanTypeAnn{
    span: 1:1-1:8,
}
---

[TestConvertTypeAnn/primitive_bigint - 1]
&ast.BigintTypeAnn{
    span: 1:1-1:7,
}
---

[TestConvertTypeAnn/primitive_symbol - 1]
&ast.SymbolTypeAnn{
    span: 1:1-1:7,
}
---

[TestConvertTypeAnn/primitive_object - 1]
&ast.ObjectTypeAnn{
    span: 1:1-1:7,
}
---

[TestConvertTypeAnn/string_literal - 1]
&ast.LitTypeAnn{
    Lit: &ast.StrLit{
        Value: "hello",
        span: 1:1-1:8,
    },
    span: 1:1-1:8,
}
---

[TestConvertTypeAnn/number_literal - 1]
&ast.LitTypeAnn{
    Lit: &ast.NumLit{
        Value: 42,
        span: 1:1-1:3,
    },
    span: 1:1-1:3,
}
---

[TestConvertTypeAnn/negative_number_literal - 1]
&ast.LitTypeAnn{
    Lit: &ast.NumLit{
        Value: -3.14,
        span: 1:1-1:6,
    },
    span: 1:1-1:6,
}
---

[TestConvertTypeAnn/boolean_literal_true - 1]
&ast.LitTypeAnn{
    Lit: &ast.BoolLit{
        Value: true,
        span: 1:1-1:5,
    },
    span: 1:1-1:5,
}
---

[TestConvertTypeAnn/boolean_literal_false - 1]
&ast.LitTypeAnn{
    Lit: &ast.BoolLit{
        span: 1:1-1:6,
    },
    span: 1:1-1:6,
}
---

[TestConvertTypeAnn/simple_type_reference - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Foo",
        span: 1:1-1:4,
    },
    span: 1:1-1:4,
}
---

[TestConvertTypeAnn/type_reference_with_one_arg - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Array",
        span: 1:1-1:6,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:7-1:13,
        },
    },
    span: 1:1-1:14,
}
---

[TestConvertTypeAnn/type_reference_with_multiple_args - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Map",
        span: 1:1-1:4,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:5-1:11,
        },
        &ast.NumberTypeAnn{
            span: 1:13-1:19,
        },
    },
    span: 1:1-1:20,
}
---

[TestConvertTypeAnn/qualified_type_reference - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "Foo",
            span: 1:1-1:4,
        },
        Right: &ast.Ident{
            Name: "Bar",
            span: 1:5-1:8,
        },
    },
    span: 1:1-1:8,
}
---

[TestConvertTypeAnn/nested_qualified_type_reference - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Member{
            Left: &ast.Ident{
                Name: "A",
                span: 1:1-1:2,
            },
            Right: &ast.Ident{
                Name: "B",
                span: 1:3-1:4,
            },
        },
        Right: &ast.Ident{
            Name: "C",
            span: 1:5-1:6,
        },
    },
    span: 1:1-1:6,
}
---

[TestConvertTypeAnn/qualified_with_type_args - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "Foo",
            span: 1:1-1:4,
        },
        Right: &ast.Ident{
            Name: "Bar",
            span: 1:5-1:8,
        },
    },
    TypeArgs: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: 1:9-1:10,
            },
            span: 1:9-1:10,
        },
    },
    span: 1:1-1:11,
}
---

[TestConvertTypeAnn/array_type - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Array",
        span: 1:1-1:9,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:1-1:7,
        },
    },
    span: 1:1-1:9,
}
---

[TestConvertTypeAnn/array_of_array - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Array",
        span: 1:1-1:11,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Array",
                span: 1:1-1:9,
            },
            TypeArgs: []ast.TypeAnn{
                &ast.NumberTypeAnn{
                    span: 1:1-1:7,
                },
            },
            span: 1:1-1:9,
        },
    },
    span: 1:1-1:11,
}
---

[TestConvertTypeAnn/readonly_array - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Array",
        span: 1:1-1:18,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:10-1:16,
        },
    },
    span: 1:1-1:18,
}
---

[TestConvertTypeAnn/simple_tuple - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:2-1:8,
        },
        &ast.NumberTypeAnn{
            span: 1:10-1:16,
        },
    },
    span: 1:1-1:17,
}
---

[TestConvertTypeAnn/tuple_with_one_element - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.BooleanTypeAnn{
            span: 1:2-1:9,
        },
    },
    span: 1:1-1:10,
}
---

[TestConvertTypeAnn/tuple_with_three_elements - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:2-1:8,
        },
        &ast.NumberTypeAnn{
            span: 1:10-1:16,
        },
        &ast.BooleanTypeAnn{
            span: 1:18-1:25,
        },
    },
    span: 1:1-1:26,
}
---

[TestConvertTypeAnn/empty_tuple - 1]
&ast.TupleTypeAnn{
    span: 1:1-1:3,
}
---

[TestConvertTypeAnn/tuple_with_rest_element - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:2-1:8,
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Array",
                    span: 1:13-1:21,
                },
                TypeArgs: []ast.TypeAnn{
                    &ast.NumberTypeAnn{
                        span: 1:13-1:19,
                    },
                },
                span: 1:13-1:21,
            },
            span: 1:10-1:21,
        },
    },
    span: 1:1-1:22,
}
---

[TestConvertTypeAnn/union_of_two_types - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:1-1:7,
        },
        &ast.NumberTypeAnn{
            span: 1:10-1:16,
        },
    },
    span: 1:1-1:16,
}
---

[TestConvertTypeAnn/union_of_three_types - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:1-1:7,
        },
        &ast.NumberTypeAnn{
            span: 1:10-1:16,
        },
        &ast.BooleanTypeAnn{
            span: 1:19-1:26,
        },
    },
    span: 1:1-1:26,
}
---

[TestConvertTypeAnn/union_with_null - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:1-1:7,
        },
        &ast.LitTypeAnn{
            Lit: &ast.NullLit{
                span: 1:10-1:14,
            },
            span: 1:10-1:14,
        },
    },
    span: 1:1-1:14,
}
---

[TestConvertTypeAnn/union_with_undefined - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.NumberTypeAnn{
            span: 1:1-1:7,
        },
        &ast.LitTypeAnn{
            Lit: &ast.UndefinedLit{
                span: 1:10-1:19,
            },
            span: 1:10-1:19,
        },
    },
    span: 1:1-1:19,
}
---

[TestConvertTypeAnn/intersection_of_two_types - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Foo",
                span: 1:1-1:4,
            },
            span: 1:1-1:4,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Bar",
                span: 1:7-1:10,
            },
            span: 1:7-1:10,
        },
    },
    span: 1:1-1:10,
}
---

[TestConvertTypeAnn/intersection_of_three_types - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: 1:1-1:2,
            },
            span: 1:1-1:2,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 1:5-1:6,
            },
            span: 1:5-1:6,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "C",
                span: 1:9-1:10,
            },
            span: 1:9-1:10,
        },
    },
    span: 1:1-1:10,
}
---

[TestConvertTypeAnn/intersection_with_object_types - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.ObjectTypeAnn{
            Elems: []ast.ObjTypeAnnElem{
                &ast.PropertyTypeAnn{
                    Name: &ast.IdentExpr{
                        Name: "a",
                        span: 1:2-1:3,
                    },
                    Value: &ast.StringTypeAnn{
                        span: 1:5-1:11,
                    },
                },
            },
            span: 1:1-1:12,
        },
        &ast.ObjectTypeAnn{
            Elems: []ast.ObjTypeAnnElem{
                &ast.PropertyTypeAnn{
                    Name: &ast.IdentExpr{
                        Name: "b",
                        span: 1:16-1:17,
                    },
                    Value: &ast.NumberTypeAnn{
                        span: 1:19-1:25,
                    },
                },
            },
            span: 1:15-1:26,
        },
    },
    span: 1:1-1:26,
}
---

[TestConvertTypeAnn/simple_function - 1]
&ast.FuncTypeAnn{
    Return: &ast.VoidTypeAnn{
        span: 1:7-1:11,
    },
    Throws: &ast.NeverTypeAnn{
        span: 1:1-1:11,
    },
    span: 1:1-1:11,
}
---

[TestConvertTypeAnn/function_with_one_param - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1:2-1:11,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 1:5-1:11,
            },
        },
    },
    Return: &ast.StringTypeAnn{
        span: 1:16-1:22,
    },
    Throws: &ast.NeverTypeAnn{
        span: 1:1-1:22,
    },
    span: 1:1-1:22,
}
---

[TestConvertTypeAnn/function_with_multiple_params - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1:2-1:11,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 1:5-1:11,
            },
        },
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "y",
                span: 1:13-1:22,
            },
            TypeAnn: &ast.StringTypeAnn{
                span: 1:16-1:22,
            },
        },
    },
    Return: &ast.BooleanTypeAnn{
        span: 1:27-1:34,
    },
    Throws: &ast.NeverTypeAnn{
        span: 1:1-1:34,
    },
    span: 1:1-1:34,
}
---

[TestConvertTypeAnn/function_with_optional_param - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1:2-1:12,
            },
            Optional: true,
            TypeAnn: &ast.NumberTypeAnn{
                span: 1:6-1:12,
            },
        },
    },
    Return: &ast.VoidTypeAnn{
        span: 1:17-1:21,
    },
    Throws: &ast.NeverTypeAnn{
        span: 1:1-1:21,
    },
    span: 1:1-1:21,
}
---

[TestConvertTypeAnn/function_with_rest_param - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.RestPat{
                Pattern: &ast.IdentPat{
                    Name: "args",
                    span: 1:2-1:19,
                },
                span: 1:2-1:19,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Array",
                    span: 1:11-1:19,
                },
                TypeArgs: []ast.TypeAnn{
                    &ast.StringTypeAnn{
                        span: 1:11-1:17,
                    },
                },
                span: 1:11-1:19,
            },
        },
    },
    Return: &ast.VoidTypeAnn{
        span: 1:24-1:28,
    },
    Throws: &ast.NeverTypeAnn{
        span: 1:1-1:28,
    },
    span: 1:1-1:28,
}
---

[TestConvertTypeAnn/function_with_type_params - 1]
&ast.FuncTypeAnn{
    TypeParams: []*ast.TypeParam{
        &ast.TypeParam{
            Name: "T",
        },
    },
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1:5-1:9,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1:8-1:9,
                },
                span: 1:8-1:9,
            },
        },
    },
    Return: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:14-1:15,
        },
        span: 1:14-1:15,
    },
    Throws: &ast.NeverTypeAnn{
        span: 1:1-1:15,
    },
    span: 1:1-1:15,
}
---

[TestConvertTypeAnn/function_with_constrained_type_param - 1]
&ast.FuncTypeAnn{
    TypeParams: []*ast.TypeParam{
        &ast.TypeParam{
            Name: "T",
            Constraint: &ast.StringTypeAnn{
                span: 1:12-1:18,
            },
        },
    },
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1:20-1:24,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1:23-1:24,
                },
                span: 1:23-1:24,
            },
        },
    },
    Return: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:29-1:30,
        },
        span: 1:29-1:30,
    },
    Throws: &ast.NeverTypeAnn{
        span: 1:1-1:30,
    },
    span: 1:1-1:30,
}
---

[TestConvertTypeAnn/simple_constructor - 1]
&ast.FuncTypeAnn{
    Return: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:11-1:14,
        },
        span: 1:11-1:14,
    },
    Throws: &ast.NeverTypeAnn{
        span: 1:1-1:14,
    },
    span: 1:1-1:14,
}
---

[TestConvertTypeAnn/constructor_with_params - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1:6-1:15,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 1:9-1:15,
            },
        },
    },
    Return: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Bar",
            span: 1:20-1:23,
        },
        span: 1:20-1:23,
    },
    Throws: &ast.NeverTypeAnn{
        span: 1:1-1:23,
    },
    span: 1:1-1:23,
}
---

[TestConvertTypeAnn/abstract_constructor - 1]
&ast.FuncTypeAnn{
    Return: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Baz",
            span: 1:20-1:23,
        },
        span: 1:20-1:23,
    },
    Throws: &ast.NeverTypeAnn{
        span: 1:1-1:23,
    },
    span: 1:1-1:23,
}
---

[TestConvertTypeAnn/empty_object - 1]
&ast.ObjectTypeAnn{
    span: 1:1-1:3,
}
---

[TestConvertTypeAnn/object_with_one_property - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "name",
                span: 1:2-1:6,
            },
            Value: &ast.StringTypeAnn{
                span: 1:8-1:14,
            },
        },
    },
    span: 1:1-1:15,
}
---

[TestConvertTypeAnn/object_with_multiple_properties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "name",
                span: 1:2-1:6,
            },
            Value: &ast.StringTypeAnn{
                span: 1:8-1:14,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "age",
                span: 1:16-1:19,
            },
            Value: &ast.NumberTypeAnn{
                span: 1:21-1:27,
            },
        },
    },
    span: 1:1-1:28,
}
---

[TestConvertTypeAnn/object_with_optional_property - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "name",
                span: 1:2-1:6,
            },
            Optional: true,
            Value: &ast.StringTypeAnn{
                span: 1:9-1:15,
            },
        },
    },
    span: 1:1-1:16,
}
---

[TestConvertTypeAnn/object_with_readonly_property - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "id",
                span: 1:11-1:13,
            },
            Readonly: true,
            Value: &ast.NumberTypeAnn{
                span: 1:15-1:21,
            },
        },
    },
    span: 1:1-1:22,
}
---

[TestConvertTypeAnn/simple_indexed_access - 1]
&ast.IndexTypeAnn{
    Target: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:1-1:2,
        },
        span: 1:1-1:2,
    },
    Index: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "K",
            span: 1:3-1:4,
        },
        span: 1:3-1:4,
    },
    span: 1:1-1:5,
}
---

[TestConvertTypeAnn/indexed_with_string_literal - 1]
&ast.IndexTypeAnn{
    Target: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:1-1:2,
        },
        span: 1:1-1:2,
    },
    Index: &ast.LitTypeAnn{
        Lit: &ast.StrLit{
            Value: "name",
            span: 1:3-1:9,
        },
        span: 1:3-1:9,
    },
    span: 1:1-1:10,
}
---

[TestConvertTypeAnn/indexed_with_number_literal - 1]
&ast.IndexTypeAnn{
    Target: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:1-1:2,
        },
        span: 1:1-1:2,
    },
    Index: &ast.LitTypeAnn{
        Lit: &ast.NumLit{
            span: 1:3-1:4,
        },
        span: 1:3-1:4,
    },
    span: 1:1-1:5,
}
---

[TestConvertTypeAnn/nested_indexed_access - 1]
&ast.IndexTypeAnn{
    Target: &ast.IndexTypeAnn{
        Target: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: 1:1-1:2,
            },
            span: 1:1-1:2,
        },
        Index: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "K",
                span: 1:3-1:4,
            },
            span: 1:3-1:4,
        },
        span: 1:1-1:5,
    },
    Index: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "P",
            span: 1:6-1:7,
        },
        span: 1:6-1:7,
    },
    span: 1:1-1:8,
}
---

[TestConvertTypeAnn/simple_conditional - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:1-1:2,
        },
        span: 1:1-1:2,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "U",
            span: 1:11-1:12,
        },
        span: 1:11-1:12,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "X",
            span: 1:15-1:16,
        },
        span: 1:15-1:16,
    },
    Else: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Y",
            span: 1:19-1:20,
        },
        span: 1:19-1:20,
    },
    span: 1:1-1:20,
}
---

[TestConvertTypeAnn/conditional_with_primitives - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:1-1:2,
        },
        span: 1:1-1:2,
    },
    Extends: &ast.StringTypeAnn{
        span: 1:11-1:17,
    },
    Then: &ast.LitTypeAnn{
        Lit: &ast.BoolLit{
            Value: true,
            span: 1:20-1:24,
        },
        span: 1:20-1:24,
    },
    Else: &ast.LitTypeAnn{
        Lit: &ast.BoolLit{
            span: 1:27-1:32,
        },
        span: 1:27-1:32,
    },
    span: 1:1-1:32,
}
---

[TestConvertTypeAnn/nested_conditional - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:1-1:2,
        },
        span: 1:1-1:2,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "U",
            span: 1:11-1:12,
        },
        span: 1:11-1:12,
    },
    Then: &ast.CondTypeAnn{
        Check: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "X",
                span: 1:16-1:17,
            },
            span: 1:16-1:17,
        },
        Extends: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Y",
                span: 1:26-1:27,
            },
            span: 1:26-1:27,
        },
        Then: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: 1:30-1:31,
            },
            span: 1:30-1:31,
        },
        Else: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 1:34-1:35,
            },
            span: 1:34-1:35,
        },
        span: 1:16-1:35,
    },
    Else: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Z",
            span: 1:39-1:40,
        },
        span: 1:39-1:40,
    },
    span: 1:1-1:40,
}
---

[TestConvertTypeAnn/infer_in_conditional - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:1-1:2,
        },
        span: 1:1-1:2,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Array",
            span: 1:11-1:16,
        },
        TypeArgs: []ast.TypeAnn{
            &ast.InferTypeAnn{
                Name: "U",
                span: 1:17-1:24,
            },
        },
        span: 1:11-1:25,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "U",
            span: 1:28-1:29,
        },
        span: 1:28-1:29,
    },
    Else: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:32-1:33,
        },
        span: 1:32-1:33,
    },
    span: 1:1-1:33,
}
---

[TestConvertTypeAnn/multiple_infer - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:1-1:2,
        },
        span: 1:1-1:2,
    },
    Extends: &ast.FuncTypeAnn{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "arg",
                    span: 1:12-1:24,
                },
                TypeAnn: &ast.InferTypeAnn{
                    Name: "A",
                    span: 1:17-1:24,
                },
            },
        },
        Return: &ast.InferTypeAnn{
            Name: "R",
            span: 1:29-1:36,
        },
        Throws: &ast.NeverTypeAnn{
            span: 1:11-1:36,
        },
        span: 1:11-1:36,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "R",
            span: 1:39-1:40,
        },
        span: 1:39-1:40,
    },
    Else: &ast.NeverTypeAnn{
        span: 1:43-1:48,
    },
    span: 1:1-1:48,
}
---

[TestConvertTypeAnn/simple_template_literal - 1]
&ast.TemplateLitTypeAnn{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "hello",
            Span: 1:2-1:7,
        },
    },
    span: 1:1-1:8,
}
---

[TestConvertTypeAnn/template_with_one_substitution - 1]
&ast.TemplateLitTypeAnn{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "hello ",
            Span: 1:2-1:8,
        },
    },
    TypeAnns: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:10-1:16,
        },
    },
    span: 1:1-1:18,
}
---

[TestConvertTypeAnn/template_with_multiple_substitutions - 1]
&ast.TemplateLitTypeAnn{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "-",
            Span: 1:11-1:12,
        },
    },
    TypeAnns: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:4-1:10,
        },
        &ast.NumberTypeAnn{
            span: 1:14-1:20,
        },
    },
    span: 1:1-1:22,
}
---

[TestConvertTypeAnn/simple_keyof - 1]
&ast.KeyOfTypeAnn{
    Type: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:7-1:8,
        },
        span: 1:7-1:8,
    },
    span: 1:1-1:8,
}
---

[TestConvertTypeAnn/keyof_object - 1]
&ast.KeyOfTypeAnn{
    Type: &ast.ObjectTypeAnn{
        Elems: []ast.ObjTypeAnnElem{
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name: "a",
                    span: 1:8-1:9,
                },
                Value: &ast.StringTypeAnn{
                    span: 1:11-1:17,
                },
            },
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name: "b",
                    span: 1:19-1:20,
                },
                Value: &ast.NumberTypeAnn{
                    span: 1:22-1:28,
                },
            },
        },
        span: 1:7-1:29,
    },
    span: 1:1-1:29,
}
---

[TestConvertTypeAnn/typeof_identifier - 1]
&ast.TypeOfTypeAnn{
    Value: &ast.Ident{
        Name: "foo",
        span: 1:8-1:11,
    },
    span: 1:1-1:11,
}
---

[TestConvertTypeAnn/typeof_qualified - 1]
&ast.TypeOfTypeAnn{
    Value: &ast.Member{
        Left: &ast.Ident{
            Name: "Foo",
            span: 1:8-1:11,
        },
        Right: &ast.Ident{
            Name: "bar",
            span: 1:12-1:15,
        },
    },
    span: 1:1-1:15,
}
---

[TestConvertTypeAnn/import_type - 1]
&ast.ImportTypeAnn{
    Source: "module",
    span: 1:1-1:17,
}
---

[TestConvertTypeAnn/import_type_with_member - 1]
&ast.ImportTypeAnn{
    Source: "module",
    Qualifier: &ast.Ident{
        Name: "Foo",
        span: 1:18-1:21,
    },
    span: 1:1-1:21,
}
---

[TestConvertTypeAnn/import_type_with_type_args - 1]
&ast.ImportTypeAnn{
    Source: "module",
    Qualifier: &ast.Ident{
        Name: "Foo",
        span: 1:18-1:21,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: 1:22-1:23,
            },
            span: 1:22-1:23,
        },
    },
    span: 1:1-1:24,
}
---

[TestConvertTypeAnn/type_predicate - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "x",
        span: 1:1-1:2,
    },
    span: 1:1-1:2,
}
---

[TestConvertTypeAnn/rest_type_in_tuple - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Array",
                    span: 1:5-1:13,
                },
                TypeArgs: []ast.TypeAnn{
                    &ast.StringTypeAnn{
                        span: 1:5-1:11,
                    },
                },
                span: 1:5-1:13,
            },
            span: 1:2-1:13,
        },
    },
    span: 1:1-1:14,
}
---

[TestConvertTypeAnn/optional_type_in_tuple - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:2-1:8,
        },
    },
    span: 1:1-1:10,
}
---

[TestConvertTypeAnn/union_of_functions - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.FuncTypeAnn{
            Return: &ast.StringTypeAnn{
                span: 1:8-1:14,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:2-1:14,
            },
            span: 1:2-1:14,
        },
        &ast.FuncTypeAnn{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "x",
                        span: 1:20-1:29,
                    },
                    TypeAnn: &ast.NumberTypeAnn{
                        span: 1:23-1:29,
                    },
                },
            },
            Return: &ast.BooleanTypeAnn{
                span: 1:34-1:41,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:19-1:41,
            },
            span: 1:19-1:41,
        },
    },
    span: 1:1-1:42,
}
---

[TestConvertTypeAnn/array_of_union - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Array",
        span: 1:1-1:20,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.UnionTypeAnn{
            Types: []ast.TypeAnn{
                &ast.StringTypeAnn{
                    span: 1:2-1:8,
                },
                &ast.NumberTypeAnn{
                    span: 1:11-1:17,
                },
            },
            span: 1:2-1:17,
        },
    },
    span: 1:1-1:20,
}
---

[TestConvertTypeAnn/union_of_arrays - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Array",
                span: 1:1-1:9,
            },
            TypeArgs: []ast.TypeAnn{
                &ast.StringTypeAnn{
                    span: 1:1-1:7,
                },
            },
            span: 1:1-1:9,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Array",
                span: 1:12-1:20,
            },
            TypeArgs: []ast.TypeAnn{
                &ast.NumberTypeAnn{
                    span: 1:12-1:18,
                },
            },
            span: 1:12-1:20,
        },
    },
    span: 1:1-1:20,
}
---

[TestConvertTypeAnn/function_returning_union - 1]
&ast.FuncTypeAnn{
    Return: &ast.UnionTypeAnn{
        Types: []ast.TypeAnn{
            &ast.StringTypeAnn{
                span: 1:7-1:13,
            },
            &ast.NumberTypeAnn{
                span: 1:16-1:22,
            },
        },
        span: 1:7-1:22,
    },
    Throws: &ast.NeverTypeAnn{
        span: 1:1-1:22,
    },
    span: 1:1-1:22,
}
---

[TestConvertTypeAnn/conditional_with_union - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:1-1:2,
        },
        span: 1:1-1:2,
    },
    Extends: &ast.UnionTypeAnn{
        Types: []ast.TypeAnn{
            &ast.StringTypeAnn{
                span: 1:11-1:17,
            },
            &ast.NumberTypeAnn{
                span: 1:20-1:26,
            },
        },
        span: 1:11-1:26,
    },
    Then: &ast.LitTypeAnn{
        Lit: &ast.BoolLit{
            Value: true,
            span: 1:29-1:33,
        },
        span: 1:29-1:33,
    },
    Else: &ast.LitTypeAnn{
        Lit: &ast.BoolLit{
            span: 1:36-1:41,
        },
        span: 1:36-1:41,
    },
    span: 1:1-1:41,
}
---

[TestConvertTypeAnn/indexed_access_of_union - 1]
&ast.IndexTypeAnn{
    Target: &ast.UnionTypeAnn{
        Types: []ast.TypeAnn{
            &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "A",
                    span: 1:2-1:3,
                },
                span: 1:2-1:3,
            },
            &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "B",
                    span: 1:6-1:7,
                },
                span: 1:6-1:7,
            },
        },
        span: 1:2-1:7,
    },
    Index: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "K",
            span: 1:9-1:10,
        },
        span: 1:9-1:10,
    },
    span: 1:1-1:11,
}
---

[TestConvertTypeAnn/generic_with_multiple_constraints - 1]
&ast.FuncTypeAnn{
    TypeParams: []*ast.TypeParam{
        &ast.TypeParam{
            Name: "T",
            Constraint: &ast.StringTypeAnn{
                span: 1:12-1:18,
            },
        },
        &ast.TypeParam{
            Name: "U",
            Constraint: &ast.NumberTypeAnn{
                span: 1:30-1:36,
            },
        },
    },
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1:38-1:42,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1:41-1:42,
                },
                span: 1:41-1:42,
            },
        },
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "y",
                span: 1:44-1:48,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 1:47-1:48,
                },
                span: 1:47-1:48,
            },
        },
    },
    Return: &ast.VoidTypeAnn{
        span: 1:53-1:57,
    },
    Throws: &ast.NeverTypeAnn{
        span: 1:1-1:57,
    },
    span: 1:1-1:57,
}
---

[TestConvertTypeAnn/simple_mapped_type - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:8-1:9,
                    },
                    span: 1:8-1:9,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 1:12-1:13,
                },
                span: 1:12-1:13,
            },
        },
    },
    span: 1:1-1:14,
}
---

[TestConvertTypeAnn/mapped_type_with_readonly - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:17-1:18,
                    },
                    span: 1:17-1:18,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 1:21-1:22,
                },
                span: 1:21-1:22,
            },
            ReadOnly: &"add",
        },
    },
    span: 1:1-1:23,
}
---

[TestConvertTypeAnn/mapped_type_with_optional - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:8-1:9,
                    },
                    span: 1:8-1:9,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 1:13-1:14,
                },
                span: 1:13-1:14,
            },
            Optional: &"add",
        },
    },
    span: 1:1-1:15,
}
---

[TestConvertTypeAnn/mapped_type_with_readonly_and_optional - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:17-1:18,
                    },
                    span: 1:17-1:18,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 1:22-1:23,
                },
                span: 1:22-1:23,
            },
            Optional: &"add",
            ReadOnly: &"add",
        },
    },
    span: 1:1-1:24,
}
---

[TestConvertTypeAnn/mapped_type_with_remove_readonly - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:18-1:19,
                    },
                    span: 1:18-1:19,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 1:22-1:23,
                },
                span: 1:22-1:23,
            },
            ReadOnly: &"remove",
        },
    },
    span: 1:1-1:24,
}
---

[TestConvertTypeAnn/mapped_type_with_remove_optional - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:8-1:9,
                    },
                    span: 1:8-1:9,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 1:14-1:15,
                },
                span: 1:14-1:15,
            },
            Optional: &"remove",
        },
    },
    span: 1:1-1:16,
}
---

[TestConvertTypeAnn/mapped_type_with_as_clause - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:8-1:9,
                    },
                    span: 1:8-1:9,
                },
            },
            Name: &ast.TemplateLitTypeAnn{
                Quasis: []*ast.Quasi{
                    &ast.Quasi{
                        Value: "get",
                        Span: 1:14-1:17,
                    },
                },
                TypeAnns: []ast.TypeAnn{
                    &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "K",
                            span: 1:19-1:20,
                        },
                        span: 1:19-1:20,
                    },
                },
                span: 1:13-1:22,
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 1:25-1:26,
                },
                span: 1:25-1:26,
            },
        },
    },
    span: 1:1-1:27,
}
---

[TestConvertTypeAnn/this_type - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Self",
        span: 1:1-1:5,
    },
    span: 1:1-1:5,
}
---

[TestConvertMethodDecl/simple_method - 1]
&ast.MethodElem{
    Name: &ast.IdentExpr{
        Name: "foo",
        span: 1:22-1:25,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "x",
                        span: 1:26-1:35,
                    },
                    TypeAnn: &ast.NumberTypeAnn{
                        span: 1:29-1:35,
                    },
                },
            },
            Return: &ast.StringTypeAnn{
                span: 1:38-1:44,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:22-1:44,
            },
        },
        span: 1:22-1:44,
    },
    Receiver: &ast.MethodReceiver{
        Mut: true,
        Span_: 1:22-1:44,
    },
    Span_: 1:22-1:44,
}
---

[TestConvertMethodDecl/static_method - 1]
&ast.MethodElem{
    Name: &ast.IdentExpr{
        Name: "create",
        span: 1:29-1:35,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Return: &ast.VoidTypeAnn{
                span: 1:39-1:43,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:29-1:43,
            },
        },
        span: 1:29-1:43,
    },
    Static: true,
    Span_: 1:29-1:43,
}
---

[TestConvertMethodDecl/private_method - 1]
&ast.MethodElem{
    Name: &ast.IdentExpr{
        Name: "helper",
        span: 1:30-1:36,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Return: &ast.VoidTypeAnn{
                span: 1:40-1:44,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:30-1:44,
            },
        },
        span: 1:30-1:44,
    },
    Receiver: &ast.MethodReceiver{
        Mut: true,
        Span_: 1:30-1:44,
    },
    Private: true,
    Span_: 1:30-1:44,
}
---

[TestConvertMethodDecl/async_method - 1]
&ast.MethodElem{
    Name: &ast.IdentExpr{
        Name: "fetchData",
        span: 1:28-1:37,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Promise",
                    span: 1:41-1:48,
                },
                TypeArgs: []ast.TypeAnn{
                    &ast.VoidTypeAnn{
                        span: 1:49-1:53,
                    },
                },
                span: 1:41-1:54,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:28-1:54,
            },
            Async: true,
        },
        span: 1:28-1:54,
    },
    Receiver: &ast.MethodReceiver{
        Mut: true,
        Span_: 1:28-1:54,
    },
    Span_: 1:28-1:54,
}
---

[TestConvertMethodDecl/method_with_type_parameters - 1]
&ast.MethodElem{
    Name: &ast.IdentExpr{
        Name: "map",
        span: 1:22-1:25,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            TypeParams: []*ast.TypeParam{
                &ast.TypeParam{
                    Name: "T",
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "fn",
                        span: 1:29-1:40,
                    },
                    TypeAnn: &ast.FuncTypeAnn{
                        Return: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "T",
                                span: 1:39-1:40,
                            },
                            span: 1:39-1:40,
                        },
                        Throws: &ast.NeverTypeAnn{
                            span: 1:33-1:40,
                        },
                        span: 1:33-1:40,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1:43-1:44,
                },
                span: 1:43-1:44,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:22-1:44,
            },
        },
        span: 1:22-1:44,
    },
    Receiver: &ast.MethodReceiver{
        Span_: 1:22-1:44,
    },
    Span_: 1:22-1:44,
}
---

[TestConvertPropertyDecl/simple_property - 1]
&ast.FieldElem{
    Name: &ast.IdentExpr{
        Name: "count",
        span: 1:22-1:27,
    },
    Type: &ast.NumberTypeAnn{
        span: 1:29-1:35,
    },
    Span_: 1:22-1:35,
}
---

[TestConvertPropertyDecl/readonly_property - 1]
&ast.FieldElem{
    Name: &ast.IdentExpr{
        Name: "id",
        span: 1:31-1:33,
    },
    Type: &ast.StringTypeAnn{
        span: 1:35-1:41,
    },
    Readonly: true,
    Span_: 1:31-1:41,
}
---

[TestConvertPropertyDecl/static_property - 1]
&ast.FieldElem{
    Name: &ast.IdentExpr{
        Name: "version",
        span: 1:29-1:36,
    },
    Type: &ast.StringTypeAnn{
        span: 1:38-1:44,
    },
    Static: true,
    Span_: 1:29-1:44,
}
---

[TestConvertPropertyDecl/private_property - 1]
&ast.FieldElem{
    Name: &ast.IdentExpr{
        Name: "secret",
        span: 1:30-1:36,
    },
    Type: &ast.StringTypeAnn{
        span: 1:38-1:44,
    },
    Private: true,
    Span_: 1:30-1:44,
}
---

[TestConvertPropertyDecl/optional_property - 1]
&ast.FieldElem{
    Name: &ast.IdentExpr{
        Name: "description",
        span: 1:22-1:33,
    },
    Type: &ast.StringTypeAnn{
        span: 1:36-1:42,
    },
    Optional: true,
    Span_: 1:22-1:42,
}
---

[TestConvertPropertyDecl/static_readonly_property - 1]
&ast.FieldElem{
    Name: &ast.IdentExpr{
        Name: "MAX_SIZE",
        span: 1:38-1:46,
    },
    Type: &ast.NumberTypeAnn{
        span: 1:48-1:54,
    },
    Static: true,
    Readonly: true,
    Span_: 1:38-1:54,
}
---

[TestConvertGetterDecl/simple_getter - 1]
&ast.GetterElem{
    Name: &ast.IdentExpr{
        Name: "value",
        span: 1:26-1:31,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Return: &ast.NumberTypeAnn{
                span: 1:35-1:41,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:22-1:41,
            },
        },
        span: 1:22-1:41,
    },
    Receiver: &ast.MethodReceiver{
        Span_: 1:22-1:41,
    },
    Span_: 1:22-1:41,
}
---

[TestConvertGetterDecl/static_getter - 1]
&ast.GetterElem{
    Name: &ast.IdentExpr{
        Name: "instance",
        span: 1:33-1:41,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "MyClass",
                    span: 1:45-1:52,
                },
                span: 1:45-1:52,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:29-1:52,
            },
        },
        span: 1:29-1:52,
    },
    Static: true,
    Span_: 1:29-1:52,
}
---

[TestConvertGetterDecl/private_getter - 1]
&ast.GetterElem{
    Name: &ast.IdentExpr{
        Name: "internalState",
        span: 1:34-1:47,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Return: &ast.AnyTypeAnn{
                span: 1:51-1:54,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:30-1:54,
            },
        },
        span: 1:30-1:54,
    },
    Receiver: &ast.MethodReceiver{
        Span_: 1:30-1:54,
    },
    Private: true,
    Span_: 1:30-1:54,
}
---

[TestConvertSetterDecl/simple_setter - 1]
&ast.SetterElem{
    Name: &ast.IdentExpr{
        Name: "value",
        span: 1:26-1:31,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "v",
                        span: 1:32-1:41,
                    },
                    TypeAnn: &ast.NumberTypeAnn{
                        span: 1:35-1:41,
                    },
                },
            },
            Return: &ast.LitTypeAnn{
                Lit: &ast.UndefinedLit{
                    span: 1:22-1:41,
                },
                span: 1:22-1:41,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:22-1:41,
            },
        },
        span: 1:22-1:41,
    },
    Receiver: &ast.MethodReceiver{
        Mut: true,
        Span_: 1:22-1:41,
    },
    Span_: 1:22-1:41,
}
---

[TestConvertSetterDecl/static_setter - 1]
&ast.SetterElem{
    Name: &ast.IdentExpr{
        Name: "config",
        span: 1:33-1:39,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "cfg",
                        span: 1:40-1:51,
                    },
                    TypeAnn: &ast.ObjectTypeAnn{
                        span: 1:45-1:51,
                    },
                },
            },
            Return: &ast.LitTypeAnn{
                Lit: &ast.UndefinedLit{
                    span: 1:29-1:51,
                },
                span: 1:29-1:51,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:29-1:51,
            },
        },
        span: 1:29-1:51,
    },
    Static: true,
    Span_: 1:29-1:51,
}
---

[TestConvertSetterDecl/private_setter - 1]
&ast.SetterElem{
    Name: &ast.IdentExpr{
        Name: "data",
        span: 1:34-1:38,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "d",
                        span: 1:39-1:45,
                    },
                    TypeAnn: &ast.AnyTypeAnn{
                        span: 1:42-1:45,
                    },
                },
            },
            Return: &ast.LitTypeAnn{
                Lit: &ast.UndefinedLit{
                    span: 1:30-1:45,
                },
                span: 1:30-1:45,
            },
            Throws: &ast.NeverTypeAnn{
                span: 1:30-1:45,
            },
        },
        span: 1:30-1:45,
    },
    Receiver: &ast.MethodReceiver{
        Mut: true,
        Span_: 1:30-1:45,
    },
    Private: true,
    Span_: 1:30-1:45,
}
---
